# server/osolot_server/api_builders/detail_builders.py
@@ -3,7 +3,6 @@ from ..models import Collective, Membership, User
 from ..permissions.collective_permissions import (
     membership_can_manage_members,
     user_visible_collective_members,
-    can_view_collective,
 )
 from .summary_builders import collective_summary, membership_summary, user_summary
 from ninja.errors import HttpError
@@ -34,10 +33,8 @@ def membership_detail_for_viewer(
         return membership_detail
 
     viewer_membership = Membership.find_for(viewer, membership.collective)
-    if (
-        viewer_membership is None
-        and membership.collective.visibility == Collective.Visibility.PRIVATE
-    ):
+    # Only users in the collective can see its members.
+    if viewer_membership is None:
         raise HttpError(404, "Membership not found.")
 
     # Redact admin/moderator-only fields.
@@ -60,13 +57,8 @@ def _collective_detail_with_members(
     )
 
 
-# TODO: allow some way for users to view / request to join private collectives.
-# Something like an access code? Or maybe an INVITED status?
-# Likely have use cases for both 1) 'join-by-link' 2) invite-only
 def collective_detail_for_viewer(
     collective: Collective, viewer: User | None
 ) -> CollectiveDetail:
-    if not can_view_collective(viewer, collective):
-        raise HttpError(404, "Collective not found.")
     visible_members = user_visible_collective_members(viewer, collective)
     return _collective_detail_with_members(collective, visible_members)
